# amiqs

./: .gitignore  README.md  kinetic_equation.nb
AMIQS/: Ana_Approx.cpp  CMakeLists.txt  LSODA.cpp  MatMul.cpp  Yukawas.cpp  amiqs.cpp  common.h  example.ini  kinetic_eq.cpp  rates.cpp  read_ini.cpp
AMIQS/Source/: Ana_Approx.cpp  Yukawas.cpp  kinetic_eq.cpp  rates.cpp  read_ini.cpp
AMIQS/include/: LSODA.h  common.h
amiqs/: amiqs.cpp  example.ini  mthM.ini
amiqs/Source/: Ana_Approx.cpp  LSODA.cpp  Yukawas.cpp  kinetic_eq.cpp  read_ini.cpp  thermal_mass_LNV.cpp
amiqs/include/: common.h
amiqsa/: LICENSE  amiqs.cpp
amiqsa/Source/: Yukawas.cpp  rates.cpp
amiqsa/output/: plot.ipynb
